--- a/ui/package.json
+++ b/ui/package.json
@@ -54,6 +54,7 @@
     "react-hook-form": "^7.55.0",
     "react-router": "^7.6.1",
     "recharts": "^2.15.2",
+    "shiki": "^3.4.2",
     "smol-toml": "^1.3.1",
     "tailwind-merge": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
